Bug 273588 - REGRESSION (macOS 14): Form controls draw with an active appearance when the window is inactive
Summary: REGRESSION (macOS 14): Form controls draw with an active appearance when the ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on: 274837 274842
Blocks:
  Show dependency treegraph
 
Reported: 2024-05-01 15:57 PDT by Jonathan Bedard
Modified: 2024-05-29 13:12 PDT (History)
6 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Bedard 2024-05-01 15:57:34 PDT
After resolving https://bugs.webkit.org/show_bug.cgi?id=273441, we discovered that fast/forms/select/mac-wk2/inactive-appearance.html matches the reference it should not match and is legitimately failing.
Comment 1 Radar WebKit Bug Importer 2024-05-01 15:57:58 PDT
<rdar://problem/127391198>
Comment 2 Jonathan Bedard 2024-05-01 16:14:34 PDT
Seems like it's actually a flakey failure:
https://ews-build.webkit.org/#/builders/8/builds/43164
Comment 3 Aditya Keerthi 2024-05-27 18:00:52 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29160
Comment 4 EWS 2024-05-28 18:44:42 PDT
Committed 279420@main (1cf2af72f97e): <https://commits.webkit.org/279420@main>

Reviewed commits have been landed. Closing PR #29160 and removing active labels.
Comment 5 WebKit Commit Bot 2024-05-29 09:19:44 PDT
Re-opened since this is blocked by bug 274837
Comment 6 Aditya Keerthi 2024-05-29 11:40:54 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29235
Comment 7 EWS 2024-05-29 13:12:22 PDT
Committed 279458@main (11d3a4ba119c): <https://commits.webkit.org/279458@main>

Reviewed commits have been landed. Closing PR #29235 and removing active labels.