Source/WebCore/platform/graphics/mac/controls/ControlMac.mm
@@ -206,6 +206,9 @@ static void applyViewlessCellSettings(float deviceScaleFactor, const ControlStyl
 
     [cell _setFallbackBackingScaleFactor:deviceScaleFactor];
 
+    bool isInActiveWindow = style.states.contains(ControlStyle::State::WindowActive);
+    [cell _setFallbackBezelPresentationState:isInActiveWindow ? NSPresentationStateActiveKey : NSPresentationStateInactive];
+
 #if USE(NSVIEW_SEMANTICCONTEXT)
     if (style.states.contains(ControlStyle::State::FormSemanticContext))
         [cell _setFallbackSemanticContext:NSViewSemanticContextForm];
